# gtkhello

./: configure.ac  meson.build  meson_options.txt
src/: Makefile.am  main.c  msg.c  msg.h
